# rtc_nodecore

./: CMakeLists.txt  README.md  package.xml
include/rtc_nodecore/: message.hpp  node_core.hpp  signal_handler.hpp
launch/: rtc_agv_system.launch.py
scripts/: demo_rtc_agv.py
src/: main.cpp  node_core.cpp  signal_handler.cpp
src/nodes/: battery_node.cpp  master_node.cpp  navigation_node.cpp  safety_node.cpp
test/: README.md  example_usage.cpp  test_node_core.cpp  test_shared_memory.cpp
